Require all steps to run in java 1.8
There's definitely a better way to manage version, but trying to run individual steps against later versions was causing my problems than it solved.
I'll think of the best way to handle this.